Deploy function & config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,21 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+image: node:12.13.0-alpine
+
+before_script:
+  - npm i -g firebase-tools
+
 stages:
-- test
-sast:
-  stage: test
-include:
-- template: Security/SAST.gitlab-ci.yml
+  - deploy
+
+deploy-functions:
+  stage: deploy
+  script:
+    - cd functions
+    - npm install
+    - cd ..
+    - firebase use --token $FIREBASE_TOKEN default
+    - echo $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
+    - FUNCTION_NAME=$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME | sed 's/.*://'
+    - firebase deploy --only "functions:$FUNCTION_NAME" --token $FIREBASE_TOKEN
+    - firebase database:set /plugins plugin.json --confirm --token $FIREBASE_TOKEN
+  when: manual
+  only: [merge_requests]
