--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --target lib --formats umd-min --name 'PluginExample.[chunkhash]' --no-clean src/library.js",
+    "build": "vue-cli-service build --target lib --formats commonjs --name 'PluginExample' --no-clean src/library.js",
     "build-dashboard": "vue-cli-service build --target lib --formats umd-min --name 'PluginExample.Dashboard' --no-clean src/components/Dashboard.vue",
     "lint": "vue-cli-service lint"
   },
@@ -22,7 +22,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "import-http": "0.3.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuefire": "^2.2.5",
+    "firebase": "8.10.0"
   },
   "eslintConfig": {
     "ignorePatterns": [
